--- a/devops.html
+++ b/devops.html
@@ -38,7 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://ng-voice.join.com/jobs/457118-senior-devops-engineer-voip-volte-ims-m-f-d'>Job @ ng-voice (Hamburg): (Senior) DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://tocco.join.com/jobs/475665-leitung-entwicklung-und-devops'>Job @ Tocco (Z?rich): Leitung Entwicklung und DevOps | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ng-voice.join.com/jobs/457118-senior-devops-engineer-voip-volte-ims-m-f-d'>Job @ ng-voice (Hamburg): (Senior) DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999683001094-devops-engineer'>Jscrambler DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999683001094-devops-engineer'>Jscrambler DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -98,11 +106,11 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ast-engineering.join.com/jobs/456721-devops-engineer-m-w-d'>Job @ AST Engineering  (Ottobrunn): DevOps Enginee... | JOIN</a></h5> 
+<h5><a href='https://ast-engineering.join.com/jobs/456721-devops-engineer-m-w-d'>Job @ AST Engineering  (Ottobrunn): DevOps Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=owasbfw3&__jvst=Employee&__jvsd=sKAZ2gw6&__jvsc=Twitter&bid=nuqlqMwW'>Forescout Technologies Inc. Careers - Sr. DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=owasbfw3&__jvst=Employee&__jvsd=sKAZ2gw6&__jvsc=Twitter&bid=nuqlqMwW'>Forescout Technologies Inc. Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -114,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/reifyhealth/d911cfaf-aba3-4b8b-984e-40fe28486246'>Reify Health - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reifyhealth/d911cfaf-aba3-4b8b-984e-40fe28486246'>Reify Health - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Boston United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -134,7 +142,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
+<h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -142,7 +150,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
+<h5><a href='https://yiluhub.join.com/jobs/473968-senior-devops-engineer'>Job @ Yilu Travel Services (Berlin): Senior DevOps... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-cj0qu49DSr6BhkaKjNoogA'>DevOps Engineer #0554 job at Stratus Solutions in San Antonio, TX, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-cj0qu49DSr6BhkaKjNoogA'>DevOps Engineer #0554 job at Stratus Solutions in San Antonio, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Antonio, TXSan Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -294,7 +302,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -396,7 +404,7 @@ agencies and the people they serve.</p>
 <p>Oct 22, 2019 ... Objective. Togo Group is seeking an IT Support & DevOps Engineer to help lead 
 internal IT operations. You will be completing tasks in support of our IT functions?...</p>
 <hr/>
-<h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
     DevOps - Engineering Manager at Srijan Technologies Pvt Ltd
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -454,14 +462,6 @@ agile service team focused on daily production service delivery and application?
 <h5><a href='http://flyhtaerospace.applytojob.com/apply/ow1nxWO88P/DevOps-Engineer'>DevOps Engineer - FLYHT Aerospace - Career Page</a></h5> 
 <p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4069426002'>Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps, ChatOps) at GitLab</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
