--- a/software.html
+++ b/software.html
@@ -39,8 +39,56 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-fraud-prevention-section-esd-10059'>Software Engineer (Fraud Prevention Section) : ESD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/software-engineer-test-automation-messaging-group-dsaid-10060'>Software Engineer - Test Automation (Messaging Group) : DSAID - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-architect-rakuten-private-cloud-cpd-10061'>Senior Software Engineer / Architect (Rakuten Private Cloud) : CPD - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://threatstack.applytojob.com/apply/JD6jHaOdqU/Software-Engineer-Agent'>Software Engineer - Agent - Threat Stack - Career Page</a></h5> 
+<p><span class="badge badge-light">Boston, MA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698685664-software-engineer'>City of Philadelphia Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Philadelphia, PA United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698682763-software-engineer-jr1009292-'>Broadridge Software Engineer (JR1009292) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698683686-lead-software-engineer-jr1007279-'>Broadridge Lead Software Engineer (JR1007279) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Kansas City, MO</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698685533-java-software-engineer-in-test-or-qa'>Broadridge JAVA Software Engineer in Test or QA | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698685989-lead-senior-software-engineer-data-engineering'>PayScale Lead, Senior Software Engineer, Data Engineering | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Seattle, WA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698683335-software-engineer-java-batch-linux-jr1008082-'>Broadridge Software Engineer (Java/Batch/Linux) (JR1008082) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Kansas City, MO</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/github/jobs/1945026'>Job Application for Senior Software Engineer at GitHub</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-.net-developer-4023'>Associate Software Engineer - .Net developer - Genesys Careers</a></h5> 
@@ -151,7 +199,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JFDIRecruitment/743999698368103-ux-ui-php-software-developer'>JFDI Recruitment UX / UI??PHP Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JFDIRecruitment/743999698368103-ux-ui-php-software-developer'>JFDI Recruitment UX / UI??PHP Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -167,7 +215,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
+<h5><a href='https://hearst.referrals.selectminds.com/jobs/manager-software-engineering-7418'>Manager, Software Engineering - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -217,7 +265,7 @@
 <p><span class="badge badge-light">Pompano Beach, FL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698649947-junior-software-developer'>IBI Group Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -229,7 +277,7 @@
 <p><span class="badge badge-light">Canada Canada Ottawa, Ontario</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/workiva/job/ooUrbfwE'>Workiva Inc. Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -249,11 +297,11 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -277,7 +325,7 @@
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/extrahop-networks-inc/job/osIpbfwu'>ExtraHop Networks, Inc. Careers - Software Developer, Web</a></h5> 
+<h5><a href='http://jobs.jobvite.com/extrahop-networks-inc/job/osIpbfwu'>ExtraHop Networks, Inc. Careers - Software Developer, Web</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -293,7 +341,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -349,7 +397,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.securityclearedjobs.com/job/801894188/senior-software-engineer/?TrackID=3258'>Senior Software Engineer job with Raytheon Systems | 801894188</a></h5> 
+<h5><a href='https://www.securityclearedjobs.com/job/801894188/senior-software-engineer/?TrackID=3258'>Senior Software Engineer job with Raytheon Systems | 801894188</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -391,54 +439,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/agoda/jobs/1937192'>Job Application for Graduate Back End Software Engineer - Singapore at Agoda</a></h5> 
-<p><span class="badge badge-light">Singapore Singapore  Singapore, Singapore</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
-<p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
-<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999698631004-software-developers-looking-to-take-their-career-to-the-next-level'>Netcompany Software Developers Looking To Take Their Career To The Next Level | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Vietnam  Vietnam</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cardinalcommerce/jobs/1818086'>Job Application for Lead Software Developer at CardinalCommerce</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/rOM8XkWuAG/Backend-Software-Engineer-Django-Python-Mexico'>Backend Software Engineer (Django, Python) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Mexico Mexico  Mexico</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=of59afwn&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYBlqMwB'>Palo Alto Networks Careers - Principal Software Engineer (Management Infrastructure)</a></h5> 
-<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BatonFinancialServicesInc/743999683846986-software-engineer'>Baton Financial Services, Inc. Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9As9fw4&__jvst=Employee+Referral&__jvsd=somUJhw9&__jvsc=Twitter&bid=nHtlqMwc'>ServiceNow Careers - Staff Software Engineer, Emerging Interfaces Team</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  San Diego, CA</span></p>
-<p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/concurrency/1390dadb-4042-430f-9431-19ef2d64ed73'>Concurrency - Senior Software Developer</a></h5> 
-<p><span class="badge badge-light">Minneapolis, MN</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/concurrency/2d7ce781-89c2-4a04-9515-fb742a8c6a38'>Concurrency - Senior Software Developer</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/concurrency/c8df7766-ec46-43cd-b8f1-ab1e99f9cad1'>Concurrency - Senior Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 
