--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularHTML5CSS3'>Senior Front End Developer(Angular/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngulaHTML5CSS3'>Mid-Senior Front End Developer(Angula/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/liferay/job/o82kbfwp'>Liferay, Inc. Careers - Frontend Engineer (client-facing)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -62,7 +70,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/jCIG3sHyRR/Senior-Front-End-Developer-Azure-Mexico'>Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/jCIG3sHyRR/Senior-Front-End-Developer-Azure-Mexico'>Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mexico Mexico  Mexico</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -118,11 +126,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502535002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502535002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502536002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -146,11 +154,11 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-14087'>Front End Developer - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-14087'>Front End Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698497102-developpeur-front-end-h-f-'>CITECH D?veloppeur Front-End (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698497102-developpeur-front-end-h-f-'>CITECH D?veloppeur Front-End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -182,7 +190,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bonify.join.com/jobs/470018-frontend-developer'>Job @ bonify (Berlin): Frontend Developer | JOIN</a></h5> 
+<h5><a href='https://bonify.join.com/jobs/470018-frontend-developer'>Job @ bonify (Berlin): Frontend Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickwings.join.com/jobs/471741-front-end-developer'>Job @ Pickwings (Z?rich): Front-End Developer | JOIN</a></h5> 
+<h5><a href='https://pickwings.join.com/jobs/471741-front-end-developer'>Job @ Pickwings (Z?rich): Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +212,7 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -212,7 +220,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tlggconsulting.join.com/jobs/472893-senior-frontend-developer'>Job @ TLGG Consulting (Berlin): Senior Frontend De... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tlggconsulting.join.com/jobs/472893-senior-frontend-developer'>Job @ TLGG Consulting (Berlin): Senior Frontend De... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -334,7 +342,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698474668-frontend-engineer-habitaclia'>Adevinta Frontend Engineer Habitaclia | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698474668-frontend-engineer-habitaclia'>Adevinta Frontend Engineer Habitaclia | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -358,7 +366,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
+<h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
       Senior Frontend Developer - Parent ApS
     </a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
@@ -441,14 +449,6 @@
 <h5><a href='https://coinjobs.org/job/senior-front-end-engineer-at-blockchain/'>Senior Front End Engineer at Blockchain ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
-<p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
